@@ -963,6 +963,7 @@ static char *builtin_masters_update_info[] = {
   "ADD WOS master://wolf.idsoftware.com:27950 id",
 
   "ADD EFS http://www.gameaholic.com/servers/qspy-startrekeliteforce Gameaholic.com",
+  "ADD EFS master://master.stef1.ravensoft.com:27953  Ravensoft",
 
   "ADD D3P master://gt.pxo.net:3445 PXO",
   "ADD D3P http://www.gameaholic.com/servers/qspy-descent3 gameaholic.com",
@@ -974,7 +975,7 @@ static char *builtin_masters_update_info[] = {
   "ADD GPS http://www.gameaholic.com/servers/qspy-shogo Shogo - gameaholic.com",
 
   "ADD RUNESRV http://www.gameaholic.com/servers/qspy-rune gameaholic.com",
-
+  
   NULL
 };
 
